; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_codecs.c_mp_append_decoders.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_codecs.c_mp_append_decoders.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_decoder_list = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_append_decoders(%struct.mp_decoder_list* %0, %struct.mp_decoder_list* %1) #0 {
  %3 = alloca %struct.mp_decoder_list*, align 8
  %4 = alloca %struct.mp_decoder_list*, align 8
  %5 = alloca i32, align 4
  store %struct.mp_decoder_list* %0, %struct.mp_decoder_list** %3, align 8
  store %struct.mp_decoder_list* %1, %struct.mp_decoder_list** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %21, %2
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.mp_decoder_list*, %struct.mp_decoder_list** %4, align 8
  %9 = getelementptr inbounds %struct.mp_decoder_list, %struct.mp_decoder_list* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %6
  %13 = load %struct.mp_decoder_list*, %struct.mp_decoder_list** %3, align 8
  %14 = load %struct.mp_decoder_list*, %struct.mp_decoder_list** %4, align 8
  %15 = getelementptr inbounds %struct.mp_decoder_list, %struct.mp_decoder_list* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = call i32 @add_new(%struct.mp_decoder_list* %13, i32* %19, i32* null)
  br label %21

21:                                               ; preds = %12
  %22 = load i32, i32* %5, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %5, align 4
  br label %6

24:                                               ; preds = %6
  ret void
}

declare dso_local i32 @add_new(%struct.mp_decoder_list*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
